fix scrolling up button

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="main.css" />
   </head>
 
-  <body>
+  <body id="brand">
     <section>
       <div class="container">
         <div class="brand">
@@ -23,6 +23,10 @@
         <div class="search-result"></div>
       </div>
     </section>
+
+ <div id="scrollUp">
+  <a href="#brand"><ion-icon name="chevron-up-outline"></ion-icon></a>
+ </div>
 
     <script
       type="module"
